# openapi-specs.json
@@ -440,10 +440,14 @@
                       "properties": {
                         "accessToken": {
                           "type": "string"
+                        },
+                        "refreshToken": {
+                          "type": "string"
                         }
                       },
                       "required": [
-                        "accessToken"
+                        "accessToken",
+                        "refreshToken"
                       ]
                     },
                     "message": {
